Resolved on the PR comments